# Text_to_SQL_Looker_Refined

./: ENHANCED_SYSTEM_SUMMARY.md  README.md  README_ENHANCED_TESTING.md  README_SIMPLE_TESTING.md  analyze_test_results.py  demo_enhanced_system.py  prd_to_implement.md  pyproject.toml  quick_test_comparison.py  requirements.txt  run_comprehensive_tests.py  simple_test_questions.txt  simple_test_runner.py  test_enhanced_runner.py  test_enhanced_system.py  test_results_20250903_071526.json  test_results_20250903_073555.json  test_results_20250903_112801.json  test_working_system.py
config/: config.yaml
data/cache/: distribution_centers_metadata.json  events_metadata.json  inventory_items_metadata.json  order_items_metadata.json  orders_metadata.json  products_metadata.json  users_metadata.json
data/llm_logs/: conversation_007230ca_attempt_1.json  conversation_00fabcfa_attempt_1.json  conversation_084c1bb3_attempt_1.json  conversation_09d5516c_attempt_1.json  conversation_0ac2cb58_attempt_1.json  conversation_0b0a936d_attempt_1.json  conversation_0b93cd5f_attempt_1.json  conversation_0c6cf931_attempt_1.json  conversation_10b176ce_attempt_1.json  conversation_10e48e05_attempt_1.json  conversation_12363049_attempt_1.json  conversation_14d536d6_attempt_1.json  (+96 more)
src/: config.py  main.py
src/bigquery/: client.py  (+1 more)
test_results/: test_results_20250903_071057.json
tests/: README.md  edge_case_generator.py  quick_test_example.py  test_complex_scenarios.py  test_generator.py  test_grounding.py  test_lookml_parser.py  test_metadata_loader.py  test_runner.py  validation_utils.py
(+23 files in other folders)
