[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookml-text-to-sql"
version = "0.1.0"
description = "LookML-Grounded Text-to-SQL for BigQuery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lkml>=1.3.0",
    "google-cloud-bigquery>=3.10.0",
    "pydantic>=2.0.0",
    "sqlglot>=18.0.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true